[project]
name = "keygen"
version = "1.0.0"
description = "Generic seeded generator framework with dedup and SQLite persistence."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
sobol = ["scipy>=1.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keygen"]
