[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ki-gen"
version = "1.0.0"
description = "Zero-dependency generic seeded generator framework with dedup and SQLite persistence."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Maximilian Todea", email = "demon.and.max@gmail.com"},
]
keywords = [    
    "generator",
    "parameter-generation",
    "seeded",
    "deduplication",
    "sqlite",
    "sobol",
    "key-generation",
    "randomization",
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
sobol = ["scipy>=1.12"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/importt-ant/ki-gen"
Repository = "https://github.com/importt-ant/ki-gen"
Issues = "https://github.com/importt-ant/ki-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kigen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/kigen/__init__.py:__version__"]
build_command = "pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.changelog]
generate = false
